Issue #1209 feat: End page footer alignment change

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -735,7 +735,7 @@ body {
     position: absolute;
     border: 2px solid #2fcce7;
     top: 23%;
-    margin: 7% 9%;
+    margin: 5% 9%;
     width: 86%;
 }
 
@@ -818,7 +818,7 @@ body {
 }
 
 .gc-ep-footer-icons img.user {
-    height: 95%;
+    height: 90%;
 }
 
 .gc-ep-rating-cont {
@@ -892,9 +892,10 @@ body {
 .gc-ep-footer {
     position: absolute;
     /*text-align: center;*/
-    width: 100%;
-    height: 20%;
+    width: 86%;
+    height: 25%;
     bottom: 13%;
+    margin: 0 9%;
 }
 
 .gc-ep-footer p {
